@@ -1,8 +1,8 @@
 class AddUserId < ActiveRecord::Migration
   def self.up
-    add_column :contexts,   :user_id, :integer, :null => false
-    add_column :projects,   :user_id, :integer, :null => false
-    add_column :todos,      :user_id, :integer, :null => false
+    add_column "contexts",   "user_id", :integer, :default => 1
+    add_column "projects",   "user_id", :integer, :default => 1 
+    add_column "todos",      "user_id", :integer, :default => 1 
     execute "UPDATE 'contexts' SET 'user_id' = 1;"
     execute "UPDATE 'projects' SET 'user_id' = 1;"
     execute "UPDATE 'todos' SET 'user_id' = 1;"
